[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainWindow/ChangePlayerPosWindow/ChangePlayerPosWindow.gd" type="Script" id=1]

[node name="ChangePlayerPosWindow" type="WindowDialog"]
anchor_left = 0.0419922
anchor_right = 0.265625
anchor_bottom = 0.188333
window_title = "Cambiar posici√≥n de jugador"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 219.0
margin_bottom = 103.0
custom_constants/separation = 9

[node name="PlayerLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 209.0
margin_bottom = 14.0
text = "Jugador"
max_lines_visible = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 3.0
margin_bottom = 27.0
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 209.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 133.0
margin_bottom = 19.0
text = "Posicion de jugador: "

[node name="PositionEditLabel" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 137.0
margin_right = 195.0
margin_bottom = 24.0
size_flags_horizontal = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AceptarButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 148.0
margin_top = 69.0
margin_right = 209.0
margin_bottom = 89.0
size_flags_horizontal = 8
text = "Aceptar"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/PositionEditLabel" to="." method="_on_PositionEditLabel_text_changed"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/AceptarButton" to="." method="_on_AceptarButton_button_up"]
